--- a/package.json
+++ b/package.json
@@ -28,24 +28,24 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.29",
+    "@angular-devkit/build-angular": "~0.1102.9",
     "@angular/cli": "^11.2.9",
-    "@angular/compiler-cli": "~11.2.10",
+    "@angular/compiler-cli": "^11.2.10",
     "@angular/language-service": "~11.2.10",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/jasmine": "^3.3.13",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~12.0.12",
     "codelyzer": "^5.0.1",
-    "jasmine-core": "~2.99.1",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~4.0.7"
+    "karma-coverage-istanbul-reporter": "^2.0.5",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "^7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.3",
+    "typescript": "4.0.7"
   }
 }
