--- a/package.json
+++ b/package.json
@@ -19,31 +19,32 @@
     "@angular/platform-browser": "^21.0.1",
     "@angular/platform-browser-dynamic": "^21.0.1",
     "@angular/router": "^21.0.1",
-    "core-js": "^2.5.4",
-    "moment-timezone": "^0.5.23",
-    "rxjs": "~6.6.7",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.15.1"
+    "core-js": "^3.47.0",
+    "moment-timezone": "^0.6.0",
+    "rxjs": "~7.8.2",
+    "tslib": "^2.8.1",
+    "zone.js": "~0.16.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^21.0.1",
     "@angular/cli": "^21.0.1",
     "@angular/compiler-cli": "^21.0.1",
     "@angular/language-service": "^21.0.1",
-    "@types/jasmine": "^3.3.13",
-    "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~12.0.12",
-    "codelyzer": "^5.0.1",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^6.3.2",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.5",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "@types/jasmine": "^5.1.13",
+    "@types/jasminewd2": "~2.0.13",
+    "@types/node": "~24.10.1",
+    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@typescript-eslint/parser": "^8.48.0",
+    "eslint": "^9.39.1",
+    "jasmine-core": "~5.12.1",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "^7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.3",
+    "ts-node": "~10.9.2",
     "typescript": "5.9.3"
   }
 }
