--- a/angular.json
+++ b/angular.json
@@ -24,20 +24,17 @@
           "standalone": true
         }
       },
-
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": {
-              "base": "dist/unlabelled-clock"
-            },
+            "outputPath": "dist/unlabelled-clock",
             "index": "src/index.html",
-            "tsConfig": "src/tsconfig.app.json",
+            "main": "src/main.ts",
+            "tsConfig": "tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.css"],
+            "styles": ["src/styles.scss"],
             "scripts": [],
-            "browser": "src/main.ts",
             "allowedCommonJsDependencies": ["moment-timezone"]
           },
           "configurations": {
@@ -61,8 +58,16 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "sourceMap": true,
+              "namedChunks": true
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -72,8 +77,12 @@
           "configurations": {
             "production": {
               "buildTarget": "unlabelled-clock:build:production"
+            },
+            "development": {
+              "buildTarget": "unlabelled-clock:build:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
@@ -85,11 +94,11 @@
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "src/test.ts",
-            "tsConfig": "src/tsconfig.spec.json",
+            "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
-            "styles": ["src/styles.css"],
-            "scripts": [],
-            "assets": ["src/favicon.ico", "src/assets"]
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.scss"],
+            "scripts": []
           }
         }
       }
